--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -210,7 +210,10 @@
 <!-- END HEADER-->
 
 <!-- BEGIN BASE-->
-<div id="base" style="background: url(/squadfree/img/bg1.jpg) no-repeat top center;" >
+<div id="base" style="
+    background: url('/squadfree/img/bg1.jpg') 100% 100% no-repeat;
+    background-size: cover;
+" >
 
     <!-- BEGIN OFFCANVAS LEFT -->
     <div class="offcanvas">
