--- a/templates/bundles/FOSUserBundle/ChangePassword/change_password_content.html.twig
+++ b/templates/bundles/FOSUserBundle/ChangePassword/change_password_content.html.twig
@@ -1,8 +1,68 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
+
+<!-- BEGIN OFFCANVAS LEFT -->
+<div class="offcanvas">
+</div><!--end .offcanvas-->
+<!-- END OFFCANVAS LEFT -->
+
+<!-- BEGIN PROFILE HEADER -->
+<section class="full-bleed">
+    <div class="section-body style-default-dark force-padding text-shadow">
+        <div class="img-backdrop" style="background-image: url('/main/img/Cap-Dep-3.jpg')"></div>
+        <div class="overlay overlay-shade-top stick-top-left height-3"></div>
+        <div class="row">
+            <div class="col-md-3 col-xs-5">
+                 <h3>  Rедактировать пароль  </h3> <br/>
+
+            </div><!--end .col -->
+        </div><!--end .row -->
+    </div><!--end .section-body -->
+</section>
+<!-- END PROFILE HEADER  -->
+<section>
+    <div class="section-body no-margin">
+        <div class="row">
+            <div class="">
+                <!-- BEGIN ENTER MESSAGE -->
+                <div class="form">
+                    <div class="card no-margin">
+                        <div class="card-body">
+
+                            <div class="form-group floating-label">
+                                <!-- ======================================= -->
+                                {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
+                                <br />
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon"></span>
+                                    {{ form_widget(form.current_password ,  { 'attr': { 'class': 'form-control' ,'placeholder':'Текущий пароль' } } ) }}
+                                </div>
+                                <br />
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon"></span>
+                                    {{ form_widget(form.plainPassword.first ,  { 'attr': { 'class': 'form-control','placeholder':'Новый пароль'} } ) }}
+                                </div>
+                                <br />
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon"></span>
+                                    {{ form_widget(form.plainPassword.second ,  { 'attr': { 'class': 'form-control' ,'placeholder':'Повторить новый пароль'} }  ) }}
+                                </div>
+                                <br />
+                                <div class="input-group input-group-lg">
+                                    <span class="input-group-addon"></span>
+                                    <input type="submit"  class="btn btn-default btn-success"  value="{{ 'изменить пароль'|trans }}" />
+                                </div>
+                                {{ form_end(form) }}
+                                <!-- ======================================= -->
+                            </div>
+                        </div><!--end .card-body -->
+                    </div><!--end .card -->
+                </div>
+            </div>
+        </div>
     </div>
-{{ form_end(form) }}
+</section>
+
+
+
+
