--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -31,7 +31,11 @@
 
             <div class="input-group input-group-lg">
                 <span class="input-group-addon"></span>
-                {{ form_widget(form.username , {'attr': {'class': 'form-control','placeholder':'Имя'}}) }}
+                {{ form_widget(form.username , {'attr': {'class': 'form-control','placeholder':'Псевдоним'}}) }}
+            </div>
+            <div class="input-group input-group-lg">
+                <span class="input-group-addon"></span>
+                {{ form_widget(form.name , {'attr': {'class': 'form-control','placeholder':'Имя'}}) }}
             </div>
 
             <div class="input-group input-group-lg">
