--- a/templates/bundles/FOSUserBundle/layout.html.twig
+++ b/templates/bundles/FOSUserBundle/layout.html.twig
@@ -18,8 +18,8 @@
                 {% endif %}
 
                 <div style="
-                    padding-left: 22px;
-                    padding-right: 22px;
+                    /*padding-left: 22px;*/
+                    /*padding-right: 22px;*/
                 ">
                     {% block fos_user_content %}
                     {% endblock fos_user_content %}
@@ -27,4 +27,6 @@
 
     </div>
 </div>
+    <br /><br />
+
 {% endblock %}
