--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -515,7 +515,7 @@
 
             <div class="menubar-foot-panel">
                 <small class="no-linebreak hidden-folded">
-                    <span class="opacity-75">Copyright &copy; 2019</span> <strong>BigBell.net</strong>
+                    <span class="opacity-75">Copyright &copy; 2019</span> <strong>GlobalBigBell.com</strong>
                 </small>
             </div>
         </div><!--end .menubar-scroll-panel-->
