--- a/templates/index/howto.html.twig
+++ b/templates/index/howto.html.twig
@@ -40,15 +40,15 @@
             <div class="row">
                 <div class="col-md-12 div-col-md-background">
                     <div style="text-align:left">
-                        <p>Известная в узком кругу инвестиционная компания BigBell готова оказать финансовую помощь, которую вы искали до сегодняшнего дня.</p>
+                        <p>Известная в узком кругу инвестиционная компания GlobalBigBell готова оказать финансовую помощь, которую вы искали до сегодняшнего дня.</p>
                         <p>Новая корпоративная стратегия компании позволяет любому юридическому и физическому лицу по всему миру принимать участие в инвестиционных проектах BigBell.</p>
-                        <p>Портфель BigBell имеет различные инвестиционные проекты, чтобы Вы сами определяли собственные ожидания размера прибыли.</p>
+                        <p>Портфель GlobalBigBell имеет различные инвестиционные проекты, чтобы Вы сами определяли собственные ожидания размера прибыли.</p>
                         <p>Активы фонда, расположенны на ключевых позициях и распределены между секторами IT-услуг, коммерческим и финансовым рынками.</p>
-                        <p>Доходность инвестиций - не единственный пункт в списке преимуществ BigBell.</p>
+                        <p>Доходность инвестиций - не единственный пункт в списке преимуществ GlobalBigBell.</p>
                         <p>Наша новая платформа для наших клиентов дает максимальную эффективность и максимально быструю обратную связь.</p>
-                        <p>С этого момента Вы можете озкнакомиться со всеми преимуществами использования BigBell - специально разработанного интерфейса со статистикой и расчетами в одном месте.</p>
+                        <p>С этого момента Вы можете озкнакомиться со всеми преимуществами использования GlobalBigBell - специально разработанного интерфейса со статистикой и расчетами в одном месте.</p>
 
-                        <p>Формируйте свою финансовую стратегию с BigBell.</p>
+                        <p>Формируйте свою финансовую стратегию с GlobalBigBell.</p>
                     </div>
                 </div>
             </div>
