--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -8,8 +8,8 @@
     <section id="intro" class="intro">
 
         <div class="slogan">
-            <h2>ИНВЕСТИРУЙТЕ УВЕРЕННО  </h2>
-            <h4>Мы Обеспечиваем Лучшее Управление Портфелем</h4>
+            <h2>Инвестиционный клуб  globalbigbell  </h2>
+            <h4>Сообщество единомышленников, целью которого является совместное инвестирование</h4>
         </div>
         <div class="page-scroll">
             <a href="#about" class="btn btn-circle">
