--- a/templates/index/about.html.twig
+++ b/templates/index/about.html.twig
@@ -38,7 +38,7 @@
 
             <div class="row">
                 <div class="col-md-12 div-col-md-background">
-                    <div><h4>BigBell</h4></div>
+                    <div><h4>GlobalBigBell</h4></div>
                     <div style="text-align:left">
                         Агрегатор доходности, позволяющий эффективно инвестировать в высокодоходные инструменты
                         с минимальными рисками благодаря грамотному распределению денежных средств инвесторов, находящихся
