--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -368,6 +368,25 @@
 
 
 
+
+
+                <li class="gui-folder">
+                    <a>
+                        <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
+                        <span class="title">Инструкция</span>
+                    </a>
+                    <!--start submenu -->
+                    <ul>
+                        <li><a  target="_blank" href="/docs/1.docx" ><span class="title">Инструкция Как зарегистрироваться в Портфеле №1-Фондовый.docx</span></a></li>
+                        <li><a target="_blank" href="/docs/2.docx" ><span class="title">Инструкция Как сгенерировать ключи в Quik.docx</span></a></li>
+                        <li><a target="_blank" href="/docs/3.doc" ><span class="title">Инструкция по установке Quik.doc</span></a></li>
+
+                    </ul><!--end /submenu -->
+                </li><!--end /menu-li -->
+
+
+
+
                 {#<!-- BEGIN FORMS -->#}
                 {#<li class="gui-folder">#}
                     {#<a>#}
