--- a/templates/admin/base.html.twig
+++ b/templates/admin/base.html.twig
@@ -346,10 +346,8 @@
                         <li><a  target="_blank" href="/admin/training" ><span class="title">Обучение</span></a></li>
 
                     </ul><!--end /submenu -->
+
                 </li><!--end /menu-li -->
-
-
-
 
 
                 <li class="gui-folder">
@@ -362,6 +360,21 @@
                         <li><a  target="_blank" href=" https://my.broker.ru/login/" ><span class="title">Broker</span></a></li>
                         <li><a target="_blank" href="https://payeer.com" ><span class="title">Payeer</span></a></li>
 
+
+
+                        <li class="gui-folder">
+                            <a>
+                                <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
+                                <span class="title">Инструкции</span>
+                            </a>
+                            <!--start submenu -->
+                            <ul>
+                                <li><a  target="_blank" href="/docs/1.docx" title="Зарегистрироваться в Портфеле №1-Фондовый.docx" ><span class="title">Зарегистрироваться в Портфеле №1-Фондовый.docx</span></a></li>
+                                <li><a target="_blank" href="/docs/2.docx" title="Сгенерировать ключи в Quik.docx" ><span class="title">Сгенерировать ключи в Quik.docx</span></a></li>
+                                <li><a target="_blank" href="/docs/3.doc" title="Установка Quik.doc"><span class="title">Установка Quik.doc</span></a></li>
+
+                            </ul><!--end /submenu -->
+                        </li><!--end /menu-li -->
                     </ul><!--end /submenu -->
                 </li><!--end /menu-li -->
 
@@ -369,20 +382,6 @@
 
 
 
-
-                <li class="gui-folder">
-                    <a>
-                        <div class="gui-icon"><span class="glyphicon glyphicon-list-alt"></span></div>
-                        <span class="title">Помощь (Инструкции)</span>
-                    </a>
-                    <!--start submenu -->
-                    <ul>
-                        <li><a  target="_blank" href="/docs/1.docx" ><span class="title">Зарегистрироваться в Портфеле №1-Фондовый.docx</span></a></li>
-                        <li><a target="_blank" href="/docs/2.docx" ><span class="title">Сгенерировать ключи в Quik.docx</span></a></li>
-                        <li><a target="_blank" href="/docs/3.doc" ><span class="title">Установка Quik.doc</span></a></li>
-
-                    </ul><!--end /submenu -->
-                </li><!--end /menu-li -->
 
 
 
