--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -56,7 +56,7 @@
                     <ul class="dropdown-menu">
                         {#<li class="active"><a href="#intro">Home</a></li>#}
                         <li><a href="/#about">ПОКУПАЙТЕ</a></li>
-                        <li><a href="/#service">ПОЧЕМУ МЫ</a></li>
+                        <li><a href="/#service">Услуги Клиентам</a></li>
                         <li><a href="/#contact">КОНТАКТЫ</a></li>
                     </ul>
                 </li>
