--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -115,7 +115,7 @@
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="wow bounceInDown" data-wow-delay="0.4s">
                             <div class="section-heading">
-                                <h2>Почему мы?</h2>
+                                <h2>Услуги Клиентам</h2>
                                 <i class="fa fa-2x fa-angle-down"></i>
 
                             </div>
@@ -125,72 +125,118 @@
             </div>
         </div>
         <div class="container">
+            {#<div class="row">#}
+                {#<div class="col-lg-2 col-lg-offset-5">#}
+                    {#<hr class="marginbot-50">#}
+                {#</div>#}
+            {#</div>#}
             <div class="row">
-                <div class="col-lg-2 col-lg-offset-5">
-                    <hr class="marginbot-50">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-3">
-                    <div class="wow fadeInLeft" data-wow-delay="0.2s">
-                        <div class="service-box">
-                            <div class="service-icon">
-                                <img src="img/icons/service-icon-1.png" alt="" />
-                            </div>
-                            <div class="service-desc">
-                                <h5>Гарантия
-                                    безопасности
-                                    инвестиций</h5>
-                                <p>Мы предлагаем несколько инвестиционных планов. Инвестируя в любой из них, вы можете
-                                    быть уверены в сохранности своих средств и прибыли.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-box">
-                            <div class="service-icon">
-                                <img src="img/icons/service-icon-2.png" alt="" />
-                            </div>
-                            <div class="service-desc">
-                                <h5>Стабильные
-                                    денежные выплаты
-                                    инвесторам</h5>
-                                <p>Все выплаты нашим инвесторам осуществляются компанией в течение 48 часов после формирования вашей заявки в личном кабинете.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="wow fadeInUp" data-wow-delay="0.2s">
-                        <div class="service-box">
-                            <div class="service-icon">
-                                <img src="img/icons/service-icon-3.png" alt="" />
-                            </div>
-                            <div class="service-desc">
-                                <h5>Партнерская
-                                    программа</h5>
+                {#<div class="col-md-3">#}
+                    {#<div class="wow fadeInLeft" data-wow-delay="0.2s">#}
+                        {#<div class="service-box">#}
+                            {#<div class="service-icon">#}
+                                {#<img src="img/icons/service-icon-1.png" alt="" />#}
+                            {#</div>#}
+                            {#<div class="service-desc">#}
+                                {#<h5>Гарантия#}
+                                    {#безопасности#}
+                                    {#инвестиций</h5>#}
+                                {#<p>Мы предлагаем несколько инвестиционных планов. Инвестируя в любой из них, вы можете#}
+                                    {#быть уверены в сохранности своих средств и прибыли.</p>#}
+                            {#</div>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#</div>#}
+                {#<div class="col-md-3">#}
+                    {#<div class="wow fadeInUp" data-wow-delay="0.2s">#}
+                        {#<div class="service-box">#}
+                            {#<div class="service-icon">#}
+                                {#<img src="img/icons/service-icon-2.png" alt="" />#}
+                            {#</div>#}
+                            {#<div class="service-desc">#}
+                                {#<h5>Стабильные#}
+                                    {#денежные выплаты#}
+                                    {#инвесторам</h5>#}
+                                {#<p>Все выплаты нашим инвесторам осуществляются компанией в течение 48 часов после формирования вашей заявки в личном кабинете.</p>#}
+                            {#</div>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#</div>#}
+                {#<div class="col-md-3">#}
+                    {#<div class="wow fadeInUp" data-wow-delay="0.2s">#}
+                        {#<div class="service-box">#}
+                            {#<div class="service-icon">#}
+                                {#<img src="img/icons/service-icon-3.png" alt="" />#}
+                            {#</div>#}
+                            {#<div class="service-desc">#}
+                                {#<h5>Партнерская#}
+                                    {#программа</h5>#}
 
-                                <p>Мы предлагаем партнерскую программу , которая позволит вам получать неограниченный доход.</p>
+                                {#<p>Мы предлагаем партнерскую программу , которая позволит вам получать неограниченный доход.</p>#}
 
-                            </div>
-                        </div>
-                    </div>
+                            {#</div>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#</div>#}
+                {#<div class="col-md-3">#}
+                    {#<div class="wow fadeInRight" data-wow-delay="0.2s">#}
+                        {#<div class="service-box">#}
+                            {#<div class="service-icon">#}
+                                {#<img src="img/icons/service-icon-4.png" alt="" />#}
+                            {#</div>#}
+                            {#<div class="service-desc">#}
+                                {#<h5>Мы Обеспечиваем Самые Лучшие Обслуживания</h5>#}
+                                {#<p>Мы стараемся сделать лучшие условия обслуживания для Вас. Мы ценим каждого нашего клиента.#}
+                        {#</div>#}
+                    {#</div>#}
+                {#</div>#}
+
+
+
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col"> </th>
+                        <th scope="col"> Название </th>
+                        <th scope="col"> Доходность </th>
+                        <th scope="col">   Подробней  </th>
+                    </tr>
+                    </thead>
+                    <tbody style=" text-align: left;">
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Индивидуальное доверительное управление</td>
+                        <td style="color:#335433;" > - </td>
+                        <td>  <a href="#">Открыть</a> </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Роботизированная торговля</td>
+                        <td style="color:#335433;"> 10-20% в месяц </td>
+                        <td>   <a href="#">Открыть</a>  </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Американские первичные акции (IPO)</td>
+                        <td style="color:#335433;"> до 100% - годовых </td>
+                        <td>  <a href="#">Открыть</a> </td>
+                    </tr>
+                    <tr>
+                        <th scope="row">4</th>
+                        <td>Инвестиции в недвижимость Тайланда</td>
+                        <td style="color:#335433;" >  -  </td>
+                        <td>  <a href="#">Открыть</a>  </td>
+                    </tr>
+
+                    <tr>
+                        <th scope="row">5</th>
+                        <td>Доходные автомобили Тайланда</td>
+                        <td style="color:#335433;" >  - </td>
+                        <td>   <a href="#">Открыть</a>  </td>
+                    </tr>
+                    </tbody>
+                </table>
                 </div>
-                <div class="col-md-3">
-                    <div class="wow fadeInRight" data-wow-delay="0.2s">
-                        <div class="service-box">
-                            <div class="service-icon">
-                                <img src="img/icons/service-icon-4.png" alt="" />
-                            </div>
-                            <div class="service-desc">
-                                <h5>Мы Обеспечиваем Самые Лучшие Обслуживания</h5>
-                                <p>Мы стараемся сделать лучшие условия обслуживания для Вас. Мы ценим каждого нашего клиента.
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- /Section: services -->
