--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -8,7 +8,7 @@
     <section id="intro" class="intro">
 
         <div class="slogan">
-            <h2>Инвестиционный клуб  globalbigbell  </h2>
+            <h2 style="font-size: 40px;">Инвестиционный клуб <br /> globalbigbell  </h2>
             <h4>Сообщество единомышленников, целью которого является совместное инвестирование</h4>
         </div>
         <div class="page-scroll">
@@ -206,7 +206,7 @@
                     <tr>
                         <th scope="row">1</th>
                         <td>Индивидуальное доверительное управление</td>
-                        <td style="color:#335433;" > - </td>
+                        <td style="color:#335433;" > до 10-25%/мес  </td>
                         <td>  <a href="#">Открыть</a> </td>
                     </tr>
                     <tr>
@@ -224,14 +224,14 @@
                     <tr>
                         <th scope="row">4</th>
                         <td>Инвестиции в недвижимость Тайланда</td>
-                        <td style="color:#335433;" >  -  </td>
+                        <td style="color:#335433;" >  15% годовых  </td>
                         <td>  <a href="#">Открыть</a>  </td>
                     </tr>
 
                     <tr>
                         <th scope="row">5</th>
                         <td>Доходные автомобили Тайланда</td>
-                        <td style="color:#335433;" >  - </td>
+                        <td style="color:#335433;" > до 50% годовых </td>
                         <td>   <a href="#">Открыть</a>  </td>
                     </tr>
                     </tbody>
