--- a/templates/index/base.html.twig
+++ b/templates/index/base.html.twig
@@ -157,6 +157,22 @@
 <script src="/squadfree/js/custom.js"></script>
 <script src="/squadfree/contactform/contactform.js"></script>
 
+
+
+
+
+<!-- BEGIN JIVOSITE CODE {literal} -->
+<script type='text/javascript'>
+    (function(){ var widget_id = 'CvNWLc7DQE';var d=document;var w=window;function l(){
+        var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+        s.src = '//code.jivosite.com/script/widget/'+widget_id
+        ; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}
+        if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}
+        else{w.addEventListener('load',l,false);}}})();
+</script>
+<!-- {/literal} END JIVOSITE CODE -->
+
+
 </body>
 
 </html>
